static/main.css
@layer base {
  :root {
    --text-50: 253 54% 95%;
    --text-100: 253 53% 90%;
    --text-200: 253 53% 80%;
    --text-300: 253 53% 70%;
    --text-400: 253 53% 60%;
    --text-500: 253 53% 50%;
    --text-600: 253 53% 40%;
    --text-700: 253 53% 30%;
    --text-800: 253 53% 20%;
    --text-900: 253 53% 10%;
    --text-950: 253 54% 5%;
    
    --background-50: 254 52% 95%;
    --background-100: 253 53% 90%;
    --background-200: 254 53% 80%;
    --background-300: 254 52% 70%;
    --background-400: 254 52% 60%;
    --background-500: 254 52% 50%;
    --background-600: 254 52% 40%;
    --background-700: 254 52% 30%;
    --background-800: 254 53% 20%;
    --background-900: 253 53% 10%;
    --background-950: 254 52% 5%;
    
    --primary-50: 257 54% 95%;
    --primary-100: 254 57% 90%;
    --primary-200: 256 57% 80%;
    --primary-300: 255 56% 70%;
    --primary-400: 255 56% 60%;
    --primary-500: 255 56% 50%;
    --primary-600: 255 56% 40%;
    --primary-700: 255 56% 30%;
    --primary-800: 256 57% 20%;
    --primary-900: 254 57% 10%;
    --primary-950: 253 54% 5%;
    
    --secondary-50: 258 38% 95%;
    --secondary-100: 254 41% 90%;
    --secondary-200: 253 39% 80%;
    --secondary-300: 254 40% 70%;
    --secondary-400: 254 40% 60%;
    --secondary-500: 254 40% 50%;
    --secondary-600: 254 40% 40%;
    --secondary-700: 254 40% 30%;
    --secondary-800: 253 39% 20%;
    --secondary-900: 254 41% 10%;
    --secondary-950: 252 38% 5%;
    
    --accent-50: 255 46% 95%;
    --accent-100: 254 49% 90%;
    --accent-200: 252 47% 80%;
    --accent-300: 253 48% 70%;
    --accent-400: 253 48% 60%;
    --accent-500: 253 48% 50%;
    --accent-600: 253 48% 40%;
    --accent-700: 253 48% 30%;
    --accent-800: 252 47% 20%;
    --accent-900: 254 49% 10%;
    --accent-950: 250 46% 5%;
  }
  
  .dark {
    --text-50: 253 54% 5%;
    --text-100: 253 53% 10%;
    --text-200: 253 53% 20%;
    --text-300: 253 53% 30%;
    --text-400: 253 53% 40%;
    --text-500: 253 53% 50%;
    --text-600: 253 53% 60%;
    --text-700: 253 53% 70%;
    --text-800: 253 53% 80%;
    --text-900: 253 53% 90%;
    --text-950: 253 54% 95%;
    
    --background-50: 254 52% 5%;
    --background-100: 253 53% 10%;
    --background-200: 254 53% 20%;
    --background-300: 254 52% 30%;
    --background-400: 254 52% 40%;
    --background-500: 254 52% 50%;
    --background-600: 254 52% 60%;
    --background-700: 254 52% 70%;
    --background-800: 254 53% 80%;
    --background-900: 253 53% 90%;
    --background-950: 254 52% 95%;
    
    --primary-50: 253 54% 5%;
    --primary-100: 254 57% 10%;
    --primary-200: 256 57% 20%;
    --primary-300: 255 56% 30%;
    --primary-400: 255 56% 40%;
    --primary-500: 255 56% 50%;
    --primary-600: 255 56% 60%;
    --primary-700: 255 56% 70%;
    --primary-800: 256 57% 80%;
    --primary-900: 254 57% 90%;
    --primary-950: 257 54% 95%;
    
    --secondary-50: 252 38% 5%;
    --secondary-100: 254 41% 10%;
    --secondary-200: 252 39% 20%;
    --secondary-300: 253 40% 30%;
    --secondary-400: 253 40% 40%;
    --secondary-500: 253 40% 50%;
    --secondary-600: 253 40% 60%;
    --secondary-700: 253 40% 70%;
    --secondary-800: 252 39% 80%;
    --secondary-900: 254 41% 90%;
    --secondary-950: 252 38% 95%;
    
    --accent-50: 250 46% 5%;
    --accent-100: 254 49% 10%;
    --accent-200: 252 47% 20%;
    --accent-300: 253 48% 30%;
    --accent-400: 253 48% 40%;
    --accent-500: 253 48% 50%;
    --accent-600: 253 48% 60%;
    --accent-700: 253 48% 70%;
    --accent-800: 252 47% 80%;
    --accent-900: 254 49% 90%;
    --accent-950: 255 46% 95%;
  }

  /* Application automatique des couleurs de base */
  html {
    background-color: hsl(var(--background-50));
    color: hsl(var(--text-900));
  }

  .dark {
    background-color: hsl(var(--background-950));
    color: hsl(var(--text-50));
  }
}

